fix background, shrink down form text on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ body {
   font-family: sans-serif;
   background: #4769d9;
   background: linear-gradient(120deg, var(--blue), var(--purple));
-  background-size: 100vw 200vh;
+  background-size: 100vw 100vh;
+  background-position: fixed;
 }
 
 .container {
@@ -291,7 +292,7 @@ header button:hover,
 .product-edit button {
   padding: 0;
   margin: 0;
-  box-sizing: ;
+  box-sizing: border-box;
 }
 .product-edit button:hover,
 .product-edit button:focus {
@@ -490,6 +491,18 @@ header button:hover,
   z-index: 2;
   transition: 0.5s;
   box-shadow: var(--shadow);
+}
+@media (max-width: 700px) {
+  #printBtn,
+  #logoutBtn,
+  #eraseBtn {
+    transform: translateX(-50px) !important;
+  }
+  .bol-info,
+  .bol-left,
+  .bol-form {
+    font-size: 10px;
+  }
 }
 #printBtn {
   right: calc(-90% - 1.5em);
